Removing contest-leaderboard.html

--- a/beers/templates/beers/contest-beers.html
+++ b/beers/templates/beers/contest-beers.html
@@ -14,7 +14,7 @@
 <h2>What We're Drinking</h2>
 
 <p>
-  See the <a href="{% url 'leaderboard' contest.id %}">Leaderboard</a>
+  See the <a href="{% url 'contest' contest.id %}">Contest</a>
 </p>
 
 <div class="contest-beerlist">
