--- a/beers/templates/base/base.html
+++ b/beers/templates/base/base.html
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">One Hundred Beers</a>
+                    <a class="navbar-brand" href="/">One Hundred Beers</a>
                 </div>
                 <div class="collapse navbar-collapse" id="hb-navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
