--- a/beers/templates/registration/login.html
+++ b/beers/templates/registration/login.html
@@ -2,37 +2,42 @@
 {% load staticfiles %}
 
 {% block content %}
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
-
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<div class="login-box">
-  <div class="login-form">
-    <div class="login-label">{{ form.username.label_tag }}</div>
-    <div class="login-field">{{ form.username}}</div>
-    <div class="login-label">{{ form.password.label_tag }}</div>
-    <div class="login-field">{{ form.password }}</div>
-    <div class="login-button-row">
-      <input type="submit" value="Login" />
+<div class="container">
+    <div class="page-header">
+        <h1>Login</h1>
     </div>
-  </div>
+    <div class="row">
+        <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3">
+            <form method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <div class="form-group {% if form.errors %}has-error{% endif %}">
+                            <label for="username">User name</label>
+                            <input type="text" class="form-control" name="username" placeholder="Username" {% if form.errors %}aria-describedby="errorBlock"{% endif %}/>
+                            {% if form.errors %}
+                            <span id="errorBlock" class="help-block">Username and password don't match</span>
+                            {% endif %}
+                        </div>
+                        <div class="form-group {% if form.errors %}has-error{% endif %}">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" name="password" placeholder="Password"/>
+                        </div>
+                        <div class="form-group">
+                            <div class="login-buttons">
+                                <button name="submit-login" type="submit" class="btn btn-primary">Login</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <input type="hidden" name="next" value="{{ next }}" />
+            </form>
+        </div>
+    </div>
+
+    {# Assumes you setup the password_reset view in your URLconf #}
+    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+
 </div>
-
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-
 {% endblock %}
