--- a/styles/sass/beers.scss
+++ b/styles/sass/beers.scss
@@ -631,7 +631,7 @@ $validation-button-color: #599bb3;
 
 .checkin-row {
   padding: 3px;
-  border: 1px;
+  border: thin solid;
 }
 
 .checkin-header {
