--- a/beers/templates/beers/contest-player.html
+++ b/beers/templates/beers/contest-player.html
@@ -14,6 +14,8 @@
   </div>
 
   <div class="container">
+    <h2>Contest: {{ player.contest.name }}</h2>
+
     <table class="table table-striped">
         <tr>
             <th>Event</th>
