--- a/beers/templates/beers/index.html
+++ b/beers/templates/beers/index.html
@@ -20,13 +20,13 @@
                               <col class="summary-player"/>
                               <col class="summary-score"/>
                           </colgroup>
-                                                    {% for leader in active.summary_leaderboard %}
-                          <tr>
+                          {% for leader in active.summary_leaderboard %}
+                            <tr>
                               <td>{{ leader.rank }}</td>
                               <td>{{ leader.user_name }}</td>
                               <td>{{ leader.total_points }}</td>
-                                                    </tr>
-                                                    {% endfor %}
+                           </tr>
+                          {% endfor %}
                       </table>
                       <p class="text-right">
                       <a href="{% url 'contest' contest_id=active.id %}">More&gt;</a>
@@ -38,7 +38,7 @@
           <div class="col-xs-12 col-md-6 summary">
               <div class="panel panel-default">
                   <div class="panel-body">
-                                            {% if not user.is_authenticated %}
+                      {% if not user.is_authenticated %}
                       <h3>Login</h3>
                       <form method="post" action="{% url 'login' %}">
                           {% csrf_token %}
@@ -58,16 +58,21 @@
                           </div>
                           <input type="hidden" name="next" value="{% url 'index' %}">
                       </form>
-                                            <div>
-                                                <p>
-                                                You'll need to create a profile - and have an
-                                                <a href="https://untappd.com">Untappd</a> account - to play. So get going!
-                                                (Note: we have no affiliation with Untappd.)
-                                                </p>
-                                            </div>
-                                            {% else %}
-                                            <p>Logged in as {{ user.username }}</p>
-                                            {% endif %}
+                      <div>
+                        <p>
+                        You'll need to create a profile - and have an
+                        <a href="https://untappd.com">Untappd</a> account - to play. 
+                        So get going!  (Note: we have no affiliation with Untappd.)
+                        </p>
+                      </div>
+                      {% else %}
+                         <p>Logged in as {{ user.username }}</p>
+                        {% if is_runner %}
+                        <p>
+                        <a href="{% url 'contest-add' %}">Add a new contest</a>
+                        </p>
+                        {% endif %}
+                      {% endif %}
                   </div>
               </div>
           </div>
@@ -76,14 +81,14 @@
           <h3>What Is This?</h3>
 
           <p>
-                        Join the hunt for the best beer and race your fellow beer-lovers to drink
+            Join the hunt for the best beer and race your fellow beer-lovers to drink
                         these 100 brews. It’s fun, promise.
           </p>
-                    <p>
-                        1 Year<br/>
-                        &nbsp;&nbsp;&nbsp;100 Beers<br/>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#8734; Possibilities<br/>
-                    </p>
+          <p> 
+          1 Year<br/>
+          &nbsp;&nbsp;&nbsp;100 Beers<br/>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#8734; Possibilities<br/>
+         </p>
       </div>
   </div>
 
